fixed issue where gameover overlay would sometimes be behind the guessed words flipping.
fixed issue where yellow color in keyboard keys would overwrite the green color.

--- a/src/css/GameOver.module.css
+++ b/src/css/GameOver.module.css
@@ -7,6 +7,7 @@
     height: 100vh;
     
     background-color: rgba(0, 0, 0, 0.457);
+    z-index: 10
 }
 
 .visible {
